@@ -1,0 +1,18 @@
+<body bgcolor=#ffffff>
+<center>
+<h1>The FSF France machine is born, 12 April 2001 at 16:12 !</h1>
+
+The baby was delivered in the <a
+href=http://www.nevrax.org/>Nevrax</a> machine room in Paris. It
+weights 70kg and is 8U tall.  We celebrated the birth with the whole
+<a href=http://www.nevrax.org/>Nevrax</a> team with an orgy of 60
+chupa chups that were also used to design a new logo proposal.
+
+<p>
+<img src=chupa.jpg>
+<p>
+<img src=rack.jpg>
+<img src=screen.jpg>
+<p>
+Sincerly yours, <a href=mailto:loic@gnu.org>Loic Dachary</a> and <a href=mailto:rq@lolix.org>Rodolphe Qui&eacute;deville</a>.
+</center>
