@@ -1,3 +1,12 @@
+Fri Apr 13 16:11:05 2001  Loic Dachary  <loic@fsffrance>
+
+	* fr/server/sysadmin-france.texi: System administration information
+	  for GNU and FSF machines located in France.
+
+Fri Apr 13 16:00:52 2001  Loic Dachary  <loic@gnu.org>
+
+	* fsfe/fr/birth: Add birth act of france.fsfeurope.org
+
 Fri Apr 13 14:40:42 2001  Loic Dachary  <loic@senga.org>
 
 	* drafts/patrick.hutton: add draft from patrick.hutton@idealx.com
